--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -713,6 +713,7 @@ $dropdown-back-spacer-x:        .375rem !default;
 
 $dropdown-toggle-margin-x:      .25rem !default;
 
+$dropdown-form-check-input-margin-x: .25rem !default;
 
 // Navs
 // =====
