--- a/scss/component/_pagination.scss
+++ b/scss/component/_pagination.scss
@@ -23,7 +23,7 @@
     position: relative;
     display: block;
     padding: $pagination-padding-y $pagination-padding-x;
-    margin-left: -1px;
+    margin-left: -$pagination-border-width;
     line-height: $pagination-line-height;
     color: $pagination-color;
     text-decoration: none;
