--- a/docs/assets/scss/_player.scss
+++ b/docs/assets/scss/_player.scss
@@ -2,7 +2,7 @@
 
 // TODO: Fix this file - bad layout and whatnot for now until after launch
 
-.player-fulldisplay .player-scripttxt {
+.player-fulldisplay .player-transcript {
     position: absolute;
     top: 0;
     left: auto;
@@ -211,7 +211,7 @@
     border: 0;
 }
 
-.player-scripttxt {
+.player-transcript {
     display: none;
     min-height: 20px;
     padding: 19px;
@@ -222,17 +222,17 @@
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
 }
-.player-scripttxt-unspoken {
+.player-transcript-unspoken {
     font-weight: bold;
 }
-.player-scripttxt-active {
+.player-transcript-active {
     background-color: #FF6;
 }
-.player-scripttxt-seekpoint:hover {
+.player-transcript-seekpoint:hover {
 	background: #CF6;
 	cursor: pointer;
 }
-.player-scriptshow .player-scripttxt {
+.player-scriptshow .player-transcript {
     display: block;
 }
 .player-scriptshow:-moz-full-screen video {
@@ -280,4 +280,35 @@
 .player-unstarted .embed-fluid:hover:after {
     filter: alpha(opacity=100);
     opacity: 1;
+}
+
+.player-description {
+    background-color: #fff;
+    border: 1px solid #e3e3e3;
+    padding: .5rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+.player-description-seekpoint:hover {
+	background: #CF6;
+	cursor: pointer;
+}
+
+.player-describe {
+    display: inline-block;
+}
+.player-describe.disabled {
+    display: none;
+}
+.player-describe > .on {
+    display: none;
+}
+.player-describe > .off {
+    display: inline-block;
+}
+.player-describe.active > .on {
+    display: inline-block;
+}
+.player-describe.active > .off {
+    display: none;
 }
