--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -38,6 +38,13 @@
 <script src="{{ site.cdn.jquery }}" integrity="{{ site.cdn.jquery_hash }}" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="{{ site.baseurl }}/assets/js/vendor/jquery.min.js"><\/script>')</script>
 
+<!-- MutationObserver Polyfill -->
+{% if site.github %}
+  <script src="{{ site.cdn.mutate }}" integrity="{{ site.cdn.mutate_hash }}" crossorigin="anonymous"></script>
+{% else %}
+  <script src="{{ site.baseurl }}/assets/js/MutationObserver.min.js"></script>
+{% endif %}
+
 <!-- Core JS -->
 {% if site.github %}
   <script src="{{ site.baseurl }}/dist/js/figuration.min.js"></script>
