--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -751,8 +751,8 @@ $navbar-brand-font-weight:          $font-weight-bold !default;
 
 $navbar-divider-width:              $border-width !default;
 $navbar-divider-color:              rgba(0,0,0,.65) !default;
-$navbar-divider-padding-x:          $navbar-item-padding-x !default;
-$navbar-divider-padding-y:          $navbar-item-padding-y !default;
+$navbar-divider-margin-x:           $navbar-item-padding-x !default;
+$navbar-divider-margin-y:           $navbar-item-padding-y !default;
 
 $navbar-toggle-font-size:           1.25rem !default;
 $navbar-toggle-padding-y:           $btn-padding-y !default;
