--- a/scss/component/_navbar.scss
+++ b/scss/component/_navbar.scss
@@ -87,6 +87,7 @@
 // Navbar Divider
 .navbar-divider {
     align-self: stretch;
+    margin: 0 $navbar-divider-margin-y;
     overflow: hidden;
     border-left: $navbar-divider-width solid $navbar-divider-color;
 }
@@ -144,6 +145,7 @@
                     }
 
                     .navbar-divider {
+                        margin: $navbar-divider-margin-x 0;
                         border-top: $navbar-divider-width solid $navbar-divider-color;
                         border-left: 0;
                     }
