--- a/scss/core/_forms.scss
+++ b/scss/core/_forms.scss
@@ -107,10 +107,12 @@ textarea.form-control {
 // horizontal form layout.
 .form-control-static {
     // Size it appropriately next to real form controls
-    padding-top: calc(#{$input-padding-y} + #{$input-border-width});
-    padding-bottom: calc(#{$input-padding-y} + #{$input-border-width});
+    padding-top: $input-padding-y;
+    padding-bottom: $input-padding-y;
     margin-bottom: 0;
     line-height: $input-line-height;
+    border: solid transparent;
+    border-width: $input-border-width 0;
 }
 
 // Form control sizing
