Add role="main" to <main> This for IE 10/11 accessibility, since they don't pass this along to AT otherwise

--- a/docs/_layouts/docs.html
+++ b/docs/_layouts/docs.html
@@ -14,7 +14,7 @@
         </div>
     </div>
 
-    <main class="container">
+    <main class="container" role="main">
         <div class="row">
             <div class="col-12 col-md-3 cf-sidebar">
                 {% include nav-sidebar.html %}
