Popover: update variable name for .popover-body color

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -896,7 +896,7 @@ $popover-header-border-color:  $uibase-100 !default;
 
 $popover-body-padding-x:       .75rem !default;
 $popover-body-padding-y:       .5rem !default;
-$popover-content-color:        $body-color !default;
+$popover-body-color:           $body-color !default;
 
 // Arrow dimension in pixels to get proper visual layout
 $popover-arrow-width:           10px !default;
