--- a/scss/component/_popover.scss
+++ b/scss/component/_popover.scss
@@ -109,7 +109,7 @@
 
 .popover-body {
     padding: $popover-body-padding-y $popover-body-padding-x;
-    color: $popover-content-color;
+    color: $popover-body-color;
 }
 
 // Arrows
