--- a/scss/core/_custom-forms.scss
+++ b/scss/core/_custom-forms.scss
@@ -130,6 +130,7 @@
     color: $input-color;
     vertical-align: middle;
     background: $input-bg $custom-select-indicator no-repeat right ($input-padding-x / 2) center;
+    background-clip: padding-box;
     background-size: $custom-select-indicator-size;
     border: $input-border-width solid $input-border-color;
     @if $enable-rounded {
@@ -199,6 +200,7 @@
     display: inline-block;
     max-width: 100%;
     height: $select-height;
+    margin-bottom: 0;
 }
 
 .custom-file-input {
@@ -222,11 +224,13 @@
     z-index: 5;
     height: $select-height;
     padding: $input-padding-y ($input-padding-x / 2);
+    overflow: hidden;
     line-height: $input-line-height;
     color: $input-color;
     pointer-events: none;
     user-select: none;
     background-color: $input-bg;
+    background-clip: padding-box;
     border: $input-border-width solid $input-border-color;
     @include border-radius($input-border-radius);
     @include box-shadow($input-box-shadow);
@@ -240,9 +244,8 @@
 
     &::before {
         position: absolute;
-        top: -$input-border-width;
-        right: -$input-border-width;
-        bottom: -$input-border-width;
+        top: 0;
+        right: 0;
         z-index: 6;
         display: block;
         height: $select-height;
@@ -250,8 +253,7 @@
         line-height: $input-line-height;
         color: $custom-file-button-color;
         background-color: $custom-file-button-bg;
-        border: $input-border-width solid $input-border-color;
-        @include border-radius(0 $input-border-radius $input-border-radius 0);
+        border-left: $input-border-width solid $input-border-color;
     }
 
     @each $lang, $text in map-get($custom-file-text, button-label) {
