Add some flexbox sizing utilities

--- a/scss/utilities/_flex.scss
+++ b/scss/utilities/_flex.scss
@@ -51,5 +51,11 @@
         .flex#{$bprule}-self-end { align-self: flex-end !important; }
         .flex#{$bprule}-self-baseline { align-self: baseline !important; }
         .flex#{$bprule}-self-stretch { align-self: stretch !important; }
+
+        // Sizing
+        .flex#{$bprule}-fill { flex: 1 1 auto !important; }
+        .flex#{$bprule}-grow { flex: 1 0 auto !important; }
+        .flex#{$bprule}-shrink { flex: 0 1 0 !important; }
+        .flex#{$bprule}-none { flex: none !important; }
     }
 }
