--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -455,10 +455,10 @@ $btn-active-box-shadow:     inset 0 .125rem .25rem rgba(0,0,0,.25) !default;
 
 $btn-default-color:         $uibase-500 !default;
 $btn-default-bg:            $white !default;
-$btn-default-border:        $uibase-500 !default;
+$btn-default-border:        rgba(0,0,0,.25) !default;
 $btn-default-hover-color:   $uibase-600 !default;
 $btn-default-hover-bg:      $uibase-75 !default;
-$btn-default-hover-border:  $uibase-700 !default;
+$btn-default-hover-border:  rgba(0,0,0,.5) !default;
 
 // Background color darken/lighten for ':active:hover' button state
 // Negative value will lighten, positive value will darken
