--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -891,6 +891,7 @@ $popover-box-shadow:            0 .2rem .3rem rgba(0,0,0,.175) !default;
 
 $popover-header-padding-x:     .75rem !default;
 $popover-header-padding-y:     .5rem !default;
+$popover-header-font-size:     $font-size-base !default;
 $popover-header-color:         $headings-color !default;
 $popover-header-bg:            $uibase-50 !default;
 $popover-header-border-width:  $border-width !default;
