--- a/scss/component/_modal.scss
+++ b/scss/component/_modal.scss
@@ -46,11 +46,15 @@
     position: relative;
     width: auto;
     margin: $modal-dialog-margin;
+    // Allow clicks to pass through for custom click handling to close modal
+    pointer-events: none;
 }
 
 // Actual modal
 .modal-content {
     position: relative;
+    // Override the `pointer-events: none;` in the .modal-dialog
+    pointer-events: auto;
     background-color: $modal-content-bg;
     background-clip: padding-box;
     border: $modal-content-border-width solid $modal-content-border-color;
