--- a/scss/component/_progress.scss
+++ b/scss/component/_progress.scss
@@ -5,19 +5,19 @@
 
 .progress {
     display: flex;
+    height: $progress-height;
     overflow: hidden; // Force rounded corners by cropping
     font-size: $progress-font-size;
-    line-height: $progress-height;
     background-color: $progress-bg;
     @include border-radius($progress-border-radius);
     @include box-shadow($progress-box-shadow);
 }
 
 .progress-bar {
-    height: $progress-height;
-    line-height: $progress-height;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color: $progress-bar-color;
-    text-align: center;
     background-color: $progress-bar-bg;
     @include box-shadow($progress-bar-box-shadow);
     @include transition($progress-bar-transition);
