Cards: Extend `.card-inverse` settings

--- a/scss/mixins/_cards.scss
+++ b/scss/mixins/_cards.scss
@@ -22,12 +22,12 @@
 
 // Inverse text within a card for use with dark backgrounds
 @mixin card-inverse {
-    color: rgba(255,255,255,.65);
+    color: $card-inverse-color;
 
     .card-header,
     .card-footer {
         background-color: transparent;
-        border-color: rgba(255,255,255,.2);
+        border-color: $card-inverse-cap-border-color;
     }
     .card-header,
     .card-footer,
@@ -40,8 +40,10 @@
         color: $white;
     }
     .card-link {
+        color: $card-inverse-link-color;
+
         @include hover-focus {
-            color: $card-link-hover-color;
+            color: $card-inverse-link-hover-color;
         }
     }
 }
