--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -834,7 +834,10 @@ $card-cap-color:           $uibase-900 !default;
 $card-cap-bg:              $uibase-50 !default;
 $card-bg:                  $white !default;
 
-$card-link-hover-color:    $white !default;
+$card-inverse-color:            rgba(255,255,255,.65) !default;
+$card-inverse-cap-border-color: rgba(255,255,255,.2) !default;
+$card-inverse-link-color:       rgba(255,255,255,.8) !default;
+$card-inverse-link-hover-color: $white !default;
 
 $card-padding-y:           1rem !default;
 $card-padding-x:           1rem !default;
