--- a/scss/core/_custom-forms.scss
+++ b/scss/core/_custom-forms.scss
@@ -145,7 +145,7 @@
     &:focus {
         color: $input-focus-color;
         background-color: $input-focus-bg;
-        border-color: $input-focus-border;
+        border-color: $input-focus-border-color;
         outline: none;
         @include box-shadow($input-focus-box-shadow);
 
@@ -211,7 +211,7 @@
     opacity: 0;
 
     &:focus ~ .custom-file-control {
-        border-color: $input-focus-border;
+        border-color: $input-focus-border-color;
         @include box-shadow($input-focus-box-shadow);
     }
 }
