--- a/scss/figuration.scss
+++ b/scss/figuration.scss
@@ -50,6 +50,7 @@
 @import "component/media";
 @import "component/card";
 @import "component/alert";
+@import "component/switch";
 
 // Components w/ JavaScript
 @import "component/modal";
