Switch width setting and margin tweaks

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -593,6 +593,7 @@ $custom-file-text: (
 
 // Switch
 // =====
+$switch-width-multiplier:           4 !default;
 $switch-control-bg:                 $input-bg !default;
 $switch-indicator-bg:               $uibase-200 !default;
 
