--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -21,10 +21,11 @@
 @import "mixins/badge";
 @import "mixins/buttons";
 @import "mixins/cards";
+@import "mixins/divider";
 @import "mixins/forms";
 @import "mixins/lists";
-@import "mixins/divider";
 @import "mixins/pagination";
+@import "mixins/switch";
 @import "mixins/tables";
 
 // Context
