--- a/scss/component/_switch.scss
+++ b/scss/component/_switch.scss
@@ -127,21 +127,7 @@
     $var-active-indicator-bg: map-get($colors, "control-hover-bg");
 
     .switch-#{$theme} {
-        .switch-control {
-            &::before {
-                background-color: $var-indicator-bg;
-            }
-        }
-
-        .switch-input {
-            &:checked ~ .switch-control {
-                background-color: $var-active-control-bg;
-
-                &::before {
-                    background-color: $var-active-indicator-bg;
-                }
-            }
-        }
+        @include switch-variant($var-indicator-bg, $var-active-control-bg, $var-active-indicator-bg);
     }
 }
 
@@ -150,37 +136,12 @@
     @each $size, $dims in $component-sizes {
         $sz-font-size:     map-get($dims, "font-size");
         $sz-padding-y:     map-get($dims, "padding-y") - ($input-line-height-delta * $sz-font-size / 2);
-        $sz-padding-x:     map-get($dims, "padding-x");
         $sz-border-radius: map-get($dims, "border-radius");
-        $sz-input-height:  (($sz-font-size * $input-line-height) + ($sz-padding-y * 2));
-        $sz-select-height: calc(#{$sz-input-height} + #{($input-border-width * 2)});
+        $sz-inner-height:  (($sz-font-size * $input-line-height) + ($sz-padding-y * 2));
+        $sz-outer-height: calc(#{$sz-inner-height} + #{($input-border-width * 2)});
 
         .switch-#{$size} {
-            .switch-control {
-                width: ($sz-font-size * $switch-width-multiplier);
-                height: $sz-select-height;
-                font-size: $sz-font-size;
-                @include border-radius($sz-border-radius);
-
-                &::before {
-                    @include border-radius(calc(#{$sz-border-radius} - #{$input-border-width}));
-                }
-            }
-
-            .switch-description {
-                font-size: $sz-font-size;
-            }
-
-            &.switch-rounded {
-                .switch-control {
-                    @include border-radius($sz-select-height);
-
-                    &::before {
-                        width: $sz-input-height;
-                        @include border-radius($sz-input-height);
-                    }
-                }
-            }
+            @include switch-size($sz-font-size, $sz-border-radius, $input-border-width, $sz-outer-height, $sz-inner-height);
         }
     }
 }
