--- a/scss/component/_switch.scss
+++ b/scss/component/_switch.scss
@@ -18,7 +18,7 @@
     background-clip: padding-box;
     border: $input-border-width solid $input-border-color;
     @include border-radius($input-border-radius);
-    @include box-shadow($input-box-shadow);
+    @include box-shadow($input-box-shadow, 0 0 transparent);
     @include transition($input-transition, $switch-control-transition);
 
     &::before {
@@ -55,13 +55,17 @@
             // calc() use in transform
             //transform: translateX(calc(-100% + #{$input-border-width}));
             transform: translateX(-100%) translateX(#{$input-border-width});
-            @include box-shadow($switch-active-indicator-box-shadow);
+            @include box-shadow($switch-active-indicator-box-shadow, 0 0 transparent);
         }
     }
 
     &:focus ~ .switch-control {
         border-color: $switch-focus-control-border-color;
-        @include box-shadow($switch-focus-control-box-shadow);
+        @if ($enable-shadows) {
+            box-shadow: $switch-focus-control-box-shadow-inner, $switch-focus-control-box-shadow-outer;
+        } @else {
+            box-shadow: $switch-focus-control-box-shadow-outer;
+        }
     }
 
     &:disabled {
