--- a/docs/assets/scss/_examples.scss
+++ b/docs/assets/scss/_examples.scss
@@ -347,3 +347,18 @@
         border: $gridline-border-width solid rgba(34,68,102,.2);
     }
 }
+
+
+// Image Replacement
+.cf-example {
+    > .heading {
+        width: 3rem;
+        height: 3rem;
+        font: 0/0 a;
+        color: transparent;
+        text-shadow: none;
+        background-color: transparent;
+        background-image: url("../brand/figuration-solid.svg");
+        border: 0;
+    }
+}
